@@ -17,10 +17,7 @@
 
 package org.openqa.selenium.grid.config;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Set;
-import java.util.TreeSet;
 
 public class StandardGridRoles {
   private StandardGridRoles() {
@@ -36,13 +33,11 @@ public class StandardGridRoles {
   public static final Role SESSION_QUEUE_ROLE = Role.of("grid-new-session-queue");
 
   public static final Set<Role> ALL_ROLES =
-      Collections.unmodifiableSet(
-          new TreeSet<>(
-              Arrays.asList(
-                  DISTRIBUTOR_ROLE,
-                  EVENT_BUS_ROLE,
-                  NODE_ROLE,
-                  ROUTER_ROLE,
-                  SESSION_MAP_ROLE,
-                  SESSION_QUEUE_ROLE)));
+      Set.of(
+          DISTRIBUTOR_ROLE,
+          EVENT_BUS_ROLE,
+          NODE_ROLE,
+          ROUTER_ROLE,
+          SESSION_MAP_ROLE,
+          SESSION_QUEUE_ROLE);
 }
